--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -5,13 +5,16 @@ nav.navbar .navbar-item {
 }
 .hero {
   nav.navbar .navbar-item {
-    &:hover,
-    &.is-active {
+    &:hover, &.is-active {
       background-color: $hero-navbar-item-hover-background-color;
     }
     &:focus {
       background-color: $hero-navbar-item-focus-background-color;
     }
+  }
+
+  nav.navbar {
+    box-shadow: 0px 0px 3px 3px darken($primary, 15%);
   }
 }
 
